# DuckDuck

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
3rd/: CMakeLists.txt
Assets/Materials/: Material.UI.dmt  Material.World.dmt
Assets/Models/: Axis.gltf  LegoCar.gltf  Rectangle.gltf  model.mtl
Assets/Shaders/: Shader.Builtin.Skybox.scfg  Shader.Builtin.Text.scfg  Shader.Builtin.UI.scfg  Shader.Builtin.UIPick.scfg  Shader.Builtin.World.scfg  Shader.Builtin.WorldPick.scfg
Editor/: CMakeLists.txt  DebugConsole.cpp  DebugConsole.hpp  Game.cpp  Game.hpp  GameCommands.cpp  GameCommands.hpp  GameConsole.cpp  GameConsole.hpp  Keybinds.cpp  Keybinds.hpp
Engine/: CMakeLists.txt  Defines.hpp  Entry.hpp  IGame.hpp
Engine/Audio/: AudioEngine.cpp  AudioEngine.hpp  AudioManager.cpp  AudioManager.hpp  Sound.cpp  Sound.hpp
Engine/Containers/: Freelist.cpp  Freelist.hpp  TArray.hpp  THashTable.hpp  TString.hpp
Engine/Core/: Application.cpp  Application.hpp  CPython.cpp  Console.cpp  Console.hpp  Controller.cpp  Controller.hpp  DMemory.cpp  DMemory.hpp  Engine.cpp  Engine.hpp  EngineLogger.hpp  Event.cpp  Event.hpp  Input.cpp  Input.hpp  Keymap.cpp  Keymap.hpp  Utils.cpp  Utils.hpp
Engine/Math/: DMath.cpp  DMath.hpp  ForwardDeclarations.hpp  Frustum.hpp  GeometryUtils.hpp  GeometyrUtils.cpp  MathTypes.hpp  (+6 more)
Plugins/: CMakeLists.txt
Plugins/Audio/: AudioEngine.cpp  AudioEngine.hpp  AudioManager.cpp  AudioManager.hpp  Sound.cpp  Sound.hpp
Scripts/: compile_shader.py
Tests/: CMakeLists.txt  TempleteTest.h  UnitTest.cpp
Tests/Array/: UnitTestArray.cpp
Tests/Audio/: TestAudio.cpp
Tests/Freelist/: TestFreelist.cpp
Tests/HashTable/: TestHashtable.cpp
Tests/Matrix/: TestMatrix.cpp
Tests/SIMD/: TestSIMD.cpp
Tests/String/: TestString.cpp
(+104 files in other folders)
